[package]
name = "urpc"
version = "0.1.0"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = "0.4.2"
heapless = "0.5.1"

[dependencies.serde]
version = "1.0.102"
default-features = false

[dev-dependencies]
hex = "0.4.0"

[features]
default = ["std"]
std = ["serde/std"]
