[package]
name = "urpc"
version = "0.2.0"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2018"
description = "uRPC (pronounced micro RPC) is a simple and lightweight RPC framework designed with embedded systems in mind."
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/dhole/urpc"
keywords = ["rpc", "embedded", "no_std"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.postcard]
version = "0.7.0"
default-features = false

[dependencies.serde]
version = "1.0.126"
default-features = false

[dev-dependencies]
hex = "0.4.0"

[features]
default = ["std"]
std = ["serde/std", "postcard/use-std"]
