[package]
name = "urpc-derive"
version = "0.1.0-alpha.1"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2018"
description = "uRPC (pronounced micro RPC) is a simple and lightweight RPC framework designed with embedded systems in mind."
license = "BSD-3-Clause"
readme = "../README.md"
repository = "https://github.com/dhole/urpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
postcard = "0.4.2"
heapless = "0.5.1"
urpc = { path = "../urpc" }

[dependencies.serde]
version = "1.0.102"
default-features = false

[dev-dependencies]
hex = "0.4.0"

[features]
default = ["std"]
std = ["serde/std"]

